[tool.poetry]
name = "generative-marketing-seo"
version = "0.1.0"
description = ""
authors = ["David Klüners <davidklueners@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
chainlit = "^1.0.101"
openai = "^1.8.0"
langchain = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
